--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -71,18 +71,14 @@
         android:id="@+id/signup_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="150dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="150dp"
+        android:layout_marginTop="39dp"
         android:layout_marginBottom="153dp"
         android:background="@color/black"
         android:text="Save"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.478"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/user_mobile_number"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintEnd_toEndOf="@+id/user_mobile_number"
+        app:layout_constraintStart_toStartOf="@+id/user_mobile_number"
+        app:layout_constraintTop_toBottomOf="@+id/user_mobile_number" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
